    . changed order of parameters;
    . no longer logging the call ID (at least in the translations).
  - Added log message 1541, which is similar to 1540, except that it does not
    log the input and output parameters.
  - Removed log messages 1514, 1516 and 1517. The information these messages
    provided is available in log messages 1540 and/or 1541.

* Logdoc:
  - Added class AbstractLogdocSerializable. It supports lazy initialization.
  - No longer automatically logging the log entry counter (followed by a
    space) before the actual translation as specified in the translation file.
    The fallback default message, however, still includes the entry counter.

* XINS/Java Common Library:
  - PropertyReader interface no longer directly extends LogdocSerializable.
    The class function serialize(PropertyReader,LogdocStringBuffer) has moved
    from class AbstractPropertyReader to class PropertyReaderUtils. Use that
    class function for a default way of serializing a PropertyReader, using
    the Whisl encoding.

* Generated build file
  - The CAPI generated javadoc now links to the J2SE 1.4.2 and accepts the
    assertion keyword.

* Build and release process:
  - Referred to the local location of Logdoc DTD files when creating the
    logdoc/build.xml file.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.200:

* XINS/Java Common Library:
  - Added class function parseHexBytes() to class HexConverter.

* Build and release process:
  - Changed Java compilation process to produce Java 1.4-compatible class
    files instead of Java 1.3-compatible class files.

* Generated build file
  - Changed Java compilation process to produce Java 1.4-compatible class
    files instead of Java 1.3-compatible class files.
  - Expecting API implementation code to be Java 1.4-aware. This means, for
    example, that assertions will be supported, and using the 'assert' keyword