@@ -15,6 +15,11 @@ CHANGES INTRODUCED IN XINS 0.201:
     log the input and output parameters.
   - Removed log messages 1514, 1516 and 1517. The information these messages
     provided is available in log messages 1540 and/or 1541.
+  - Added logdoc entries:
+    . 1309: XINS/Java Server Framework is bootstrapping. This also logs the
+            version.
+    . 1310: XINS/Java Server Framework version is different from XINS/Java
+            Common Library version.
 
 * Logdoc:
   - Added class AbstractLogdocSerializable. It supports lazy initialization.
